--- a/Design/design.tex
+++ b/Design/design.tex
@@ -394,7 +394,7 @@ I will try to prototye:
 
 \begin{center}
 
-\begin{tabular}{ | p{2cm}| p{1cm} | p{1cm} | p{2cm} | p{1cm} | p{3cm} | }
+\begin{longtable}{ | p{2cm}| p{1cm} | p{1cm} | p{2cm} | p{1cm} | p{3cm} | }
     \hline
     \textbf{Name} & \textbf{Data Type} & \textbf{Length} & \textbf{Validation} &\textbf{Example Data} & \textbf{Comment} \\ \hline
    TableNumber & Integer & 2 Characters & Range  & 13 & Max range will be 16 \\ \hline
@@ -418,7 +418,7 @@ I will try to prototye:
     BookingID & Integer & 2bytes &Number, not used before & 1232 & Unique ID when someone makes booking \\ \hline
 
 
-\end{tabular}
+\end{longtable}
 \label{tab:range_examples}
 \end{center}
 
