--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -1,8 +1,26 @@
 \chapter{User Manual}
 
 \section{Introduction}
+The purpose of the system is to manage the restaurant in terms of orders and bookings more easily. The application enables the user to add, delete or update a booking and it anables the user to add or delete to an order and have the option to print or preview the invoice for the order. In addition, the user can manage the item menu by adding, deleting or updating an item from the menu.
 
 \section{Installation}
+
+\subsection{Software}
+Since the application has been compiled into a windows executable (.exe), the user will not need to make any changes to their computer system or any additional software to run the application.
+
+\subsection{Hardware}
+
+The following hardware will be required to run the system:
+
+\begin{itemize}
+
+	\item Keyboard - for user input
+	\item Mouse - to navigate around the application
+	
+
+\end{itemize}
+
+
 
 \subsection{Prerequisite Installation}
 
