--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -1,7 +1,7 @@
 \chapter{User Manual}
 
 \section{Introduction}
-The purpose of the system is to manage the restaurant in terms of orders and bookings more easily. The application enables the user to add, delete or update a booking and it anables the user to add or delete to an order and have the option to print or preview the invoice for the order. In addition, the user can manage the item menu by adding, deleting or updating an item from the menu.
+The purpose of the system is to manage the restaurant in terms of orders and bookings more easily. The application enables the user to add, delete or update a booking and it enables the user to add or delete to an order and have the option to print or preview the invoice for the order. In addition, the user can manage the item menu by adding, deleting or updating an item from the menu.
 
 \section{Installation}
 
@@ -14,8 +14,11 @@ The following hardware will be required to run the system:
 
 \begin{itemize}
 
-	\item Keyboard - for user input
-	\item Mouse - to navigate around the application
+	\item A keyboard for user input
+	\item A mouse to navigate around the application
+	\item A Hard Disk Dirve for file storage 
+	\item A Visual Display Unit for output
+	\item A printer will be needed if the user wants to be able to print invoices
 	
 
 \end{itemize}
