--- a/Testing/testing.tex
+++ b/Testing/testing.tex
@@ -9,12 +9,12 @@
     \begin{tabular}{|p{2cm}|p{5cm}|p{5cm}|p{4cm}|}
         \hline
         \textbf{Test Series} & \textbf{Purpose of Test Series} & \textbf{Testing Strategy} & \textbf{Strategy Rationale}\\ \hline
-         1 & Test the flow of control between the user interfaces & Top-down testing &  \\ \hline
-	2 & Test validation of data input is detected & Bottom-up testing & Each component will be tested once it is developed \\ \hline
-	3 & Test information input is stored in the correct place & Black box testing & Each component will be tested once it is developed \\ \hline
-	4 & Test algorithms to make sure that the output is correct & White box testing & Each component will be tested once it is developed \\ \hline
-	5 & Test that the system fufils the specification & Acceptance testing & Each component will be tested once it is developed \\ \hline
-	6 & Test database has referential integrity & Integration testing & Each component will be tested once it is developed \\ \hline
+         1 & Test the flow of control between the user interfaces & Top-down testing & Without a correct flow of control between the user interfaces, the application will not be useable therefore I must test the flow of control.  \\ \hline
+	2 & Test validation of data input is detected & Bottom-up testing & The program needs to be tested on its reliablity and so using this strategy, I will be able to find out \\ \hline
+	3 & Test information input is stored in the correct place & Black box testing & Information needs to be stored in the correct place to prevent confusion thus making the application more usable \\ \hline
+	4 & Test algorithms to make sure that the output is correct & White box testing & Output needs to be correct for the application to be useable therefore I can find out by using this strategy \\ \hline
+	5 & Test that the system fufils the specification & Acceptance testing & Get an overall idea if the new system is usable and meets the requirements of my client  \\ \hline
+	6 & Test database has referential integrity & Integration testing &Find out whether the manipulation of the database is reliable  \\ \hline
     \end{tabular}
 \end{center}
 
@@ -24,7 +24,7 @@
     \begin{tabular}{|p{2cm}|p{5cm}|p{5cm}|p{4cm}|}
         \hline
         \textbf{Test Series} & \textbf{Purpose of Test Series} & \textbf{Testing Strategy} & \textbf{Strategy Rationale}\\ \hline
-	4 & Test algorithms \textbf{and SQL statements} to make sure that the output is correct & White box testing & Each component will be tested once it is developed \\ \hline
+	4 & Test algorithms \textbf{and SQL statements} to make sure that the output is correct & White box testing & Output needs to be correct for the application to be useable therefore I can find out by using this strategy \\ \hline
     \end{tabular}
 \end{center}
 
