--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -36,6 +36,17 @@ The following hardware will be required to run the system:
 
 \subsection{System Installation}
 
+The new system has been packaged into a windows installer and so to install the new system, follow these steps: \\
+\\ 1. The install package is called "RestauranSetup", locate to the directory of the install package of where it has been placed. 
+
+\begin{figure}[H]
+    \includegraphics[height = 20cm]{./Manual/images/install1}
+    \caption{Example of what the installer should look like} \label{fig:Flowchart1}
+\end{figure}
+\\
+
+2. Double click on the installer and the 
+
 \subsection{Running the System}
 
 \section{Tutorial}
